2009-04-03 Jerome Pasquier  <rainbru@free.fr>
	* common/objectpos.cpp : Uses constructor initializers
	
	* common/xmllanguage.cpp : Now computes complete percent.
	* config/language.xml : Added PoMessagesNumber and renamed 
	CompletePercent to TranslatedMessages.

2009-04-01 Jerome Pasquier  <rainbru@free.fr>
	* common/netpacketbase.cpp : Using gettext strings and a macro.
	* common/itemlistfile.cpp : Using gettext strings and a macro.
	* common/httpresponse.cpp : Using gettext strings and a macro.
	* common/hashfile.cpp : Using gettext strings.
	* common/globaluri.cpp : Using gettext strings.
	
	* common/Makefile.am : Added boostimport.h
	
	* common/nclude_boost.h : Renamed boostimport.h.

2009-03-31 Jerome Pasquier  <rainbru@free.fr>
	* common/ftpclient.cpp : Now uses gettext.
	* common/enetclient.cpp : Now uses gettext.
	* common/enetbase.cpp : Now uses gettext.
	* common/EasyBMP.cpp : Now uses gettext.
	
2009-03-31 Carine Chum <carine.chum@free.fr>
	* common/include_boost.h : Using this header
	instead a direct boost include fix a lot of compilation
	errors in the common library.

	* common/Makefile.am: Added version numbers for boost libraries
	name to be compliant with the dlls.
	
2009-03-30 Carine Chum <carine.chum@free.fr>
	* acinclude.m4 : Adding version to boost libraries names.
	
	* common/loadbmp.cpp : Now using namespace alias for 
	boost::filesystem.
	* common/globaluri.cpp : Now using namespace alias for 
	boost::filesystem.
	* common/curlgetfile.cpp : Now using namespace alias for 
	boost::filesystem.

2009-03-28 Jerome Pasquier  <rainbru@free.fr>
	* common/curlsubmit.cpp : now uses gettext.
	* common/curlservermodifclients.cpp : now uses gettext.
	* common/curlserverdelete.cpp : now uses gettext.
	* common/curlserveradd.cpp : now uses gettext.
	
	* common/Makefile.in : header/sources lists now sorted.

2009-03-27 Jerome Pasquier  <rainbru@free.fr>
	* common/curlposteddata.cpp : Now uses gettext.
	* common/curlgetfile.cpp : Now uses gettext.